# roboptim-tutorial

./: .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/001-function/: 001-function.cc  CMakeLists.txt  README.md
src/002-filter/: 002-filter.cc  CMakeLists.txt  README.md
src/002-operator/: 002-operator.cc  CMakeLists.txt  README.md
src/003-hs71/: 003-hs71.cc  CMakeLists.txt  README.md
src/004-bspline/: 004-bspline.cc  CMakeLists.txt  README.md
src/005-trajectory-optimization/: 005-trajectory-optimization.cc  CMakeLists.txt  README.md
